charts/servicemesh-operator/tests/healthcheck/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-servicemesh-deployments
  labels:
    healthcheck: "true"
    workload: "true"
spec:
  namespace: default
  timeouts:
    error: 5s
    assert: 5s
  scenarios:
    - bindings:
        - name: deployment
          value: istio-operator
  steps:
    - use:
        template: ../../../../tests/templates/deployment-available.yaml
        with:
          bindings:
            - name: deployment
              value: ($deployment)
            - name: targetNamespace
              value: openshift-operators
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-servicemesh-daemonset
  labels:
    healthcheck: "true"
    workload: "true"
spec:
  namespace: default
  timeouts:
    error: 5s
    assert: 5s
  steps:
    - use:
        template: ../../../../tests/templates/daemonset-available.yaml
        with:
          bindings:
            - name: daemonset
              value: istio-cni-node-v2-6
            - name: targetNamespace
              value: openshift-operators
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-servicemesh-controlplane
  labels:
    healthcheck: "true"
    workload: "true"
spec:
  namespace: default
  timeouts:
    error: 5s
    assert: 5s
  steps:
    - try:
        - assert:
            resource:
              apiVersion: maistra.io/v2
              kind: ServiceMeshControlPlane
              metadata:
                namespace: istio-system
              status:
                (conditions[?type == 'Ready'] | [0].status): "True"
